--- a/pages/8564.html
+++ b/pages/8564.html
@@ -470,7 +470,23 @@ margin-left: 0em;
 </div>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#definition">Definition</a></li><li><a href="#examples">Examples</a></li><li><a href="#properties">Properties</a></li><li><a href="#StructureTheoryOfModules">Structure theory of modules</a><ul><li><a href="#free_and_projective_modules">Free and projective modules</a></li><li><a href="#SmithNormalForm">Smith normal form</a></li><li><a href="#torsionfree_modules">Torsion-free modules</a></li><li><a href="#structure_theory_of_finitely_generated_modules">Structure theory of finitely generated modules</a></li></ul></li><li><a href="#in_constructive_mathematics">In constructive mathematics</a></li><li><a href="#references">References</a></li></ul></div>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#definition'>Definition</a></li>
+<li><a href='#examples'>Examples</a></li>
+<li><a href='#properties'>Properties</a></li>
+<li><a href='#StructureTheoryOfModules'>Structure theory of modules</a></li>
+<ul>
+<li><a href='#free_and_projective_modules'>Free and projective modules</a></li>
+<li><a href='#SmithNormalForm'>Normal forms</a></li>
+<li><a href='#torsionfree_modules'>Torsion-free modules</a></li>
+<li><a href='#structure_theory_of_finitely_generated_modules'>Structure theory of finitely generated modules</a></li>
+</ul>
+<li><a href='#in_constructive_mathematics'>In constructive mathematics</a></li>
+<li><a href='#references'>References</a></li>
+</ul>
+</div>
+
 <h2 id="definition">Definition</h2>
 
 <p>A <a class="existingWikiWord" href="/nlab/show/ring">ring</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>R</mi></mrow><annotation encoding="application/x-tex">R</annotation></semantics></math> is a <strong>principal ideal domain</strong> if</p>
@@ -609,7 +625,7 @@ margin-left: 0em;
 <p>Projective modules over a pid are free. In particular, submodules of projective modules are projective.</p>
 </div>
 
-<h3 id="SmithNormalForm">Smith normal form</h3>
+<h3 id="SmithNormalForm">Normal forms</h3>
 
 <div class="num_prop" id="MatricesOverPrincipalIdealDomainsHaveSmithNormalForm">
 <h6 id="proposition_3">Proposition</h6>
@@ -628,6 +644,12 @@ margin-left: 0em;
 </center>
 <p>such that, moreover, each <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>a</mi> <mi>i</mi></msub></mrow><annotation encoding="application/x-tex">a_i</annotation></semantics></math> <a class="existingWikiWord" href="/nlab/show/divisor">divides</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>a</mi> <mrow><mi>i</mi><mo>+</mo><mn>1</mn></mrow></msub></mrow><annotation encoding="application/x-tex">a_{i+1}</annotation></semantics></math>.</p>
 </div>
+
+<p>For <a class="existingWikiWord" href="/nlab/show/matrices">matrices</a> with coefficients in the pid of <a class="existingWikiWord" href="/nlab/show/integers">integers</a> see also</p>
+
+<ul>
+<li><em><a class="existingWikiWord" href="/nlab/show/Hermite+normal+form">Hermite normal form</a></em>.</li>
+</ul>
 
 <h3 id="torsionfree_modules">Torsion-free modules</h3>
 
@@ -703,14 +725,14 @@ M &amp; \to &amp; K \otimes_R M
 
 <div class="revisedby">
   <p>
-  Last revised on September 19, 2018 at 05:02:06.
+  Last revised on September 23, 2018 at 05:26:22.
   See the <a href="https://ncatlab.org/nlab/history/principal ideal domain" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/principal+ideal+domain" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/principal+ideal+domain/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/principal+ideal+domain" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/principal+ideal+domain" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/principal+ideal+domain" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/principal+ideal+domain/16" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(16 revisions)</span> | <a href="/nlab/show/diff/principal+ideal+domain" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/principal+ideal+domain" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/principal ideal domain/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
