--- a/pages/19710.html
+++ b/pages/19710.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9030/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9030/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -360,7 +360,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p>Pierce, B. C., Turner, D. N.: <em>Local Type Inference</em>, ACM SIGPLAN–SIGACT Symposium on Principles of Programming Languages (POPL), San Diego, California, 1998, Full version in ACM Transactions on Programming Languages and Systems (TOPLAS), 22(1), January 2000, pp. 1–4. This is usually cited as the “original” paper on bidirectional typechecking.</p>
+<p>Pierce, B. C., Turner, D. N.: <em>Local Type Inference</em>, ACM SIGPLAN–SIGACT Symposium on Principles of Programming Languages (POPL), San Diego, California, 1998, Full version in ACM Transactions on Programming Languages and Systems (TOPLAS), 22(1), January 2000, pp. 1–44, (<a href="http://www.cis.upenn.edu/~bcpierce/papers/lti-toplas.pdf">pdf</a>). This is usually cited as the “original” paper on bidirectional typechecking.</p>
 </li>
 
 <li>
@@ -425,14 +425,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on September 22, 2018 at 06:18:14.
+  Last revised on September 23, 2018 at 06:07:43.
   See the <a href="https://ncatlab.org/nlab/history/bidirectional typechecking" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/bidirectional+typechecking" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/bidirectional+typechecking" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/bidirectional+typechecking/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/bidirectional+typechecking" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/bidirectional+typechecking" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/bidirectional typechecking/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
