--- a/pages/16174.html
+++ b/pages/16174.html
@@ -422,7 +422,21 @@ margin-left: 0em;
 </div>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#definition">Definition</a></li><li><a href="#properties">Properties</a><ul><li><a href="#AsTheEquivariantStableCohomotopyOfThePoint">As the equivariant stable cohomotopy of the point</a></li><li><a href="#as_the_endomorphism_ring_of_the_additive_burnside_category">As the endomorphism ring of the additive Burnside category</a></li><li><a href="#relation_to_representation_ring">Relation to representation ring</a></li></ul></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#references">References</a></li></ul></div>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#idea'>Idea</a></li>
+<li><a href='#definition'>Definition</a></li>
+<li><a href='#properties'>Properties</a></li>
+<ul>
+<li><a href='#AsTheEquivariantStableCohomotopyOfThePoint'>As the equivariant stable cohomotopy of the point</a></li>
+<li><a href='#as_the_endomorphism_ring_of_the_additive_burnside_category'>As the endomorphism ring of the additive Burnside category</a></li>
+<li><a href='#relation_to_representation_ring'>Relation to representation ring</a></li>
+</ul>
+<li><a href='#related_concepts'>Related concepts</a></li>
+<li><a href='#references'>References</a></li>
+</ul>
+</div>
+
 <h2 id="idea">Idea</h2>
 
 <p>The Burnside ring <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>A</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">A(G)</annotation></semantics></math> of a <a class="existingWikiWord" href="/nlab/show/finite+group">finite group</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> is the analogue of the <a class="existingWikiWord" href="/nlab/show/representation+ring">representation ring</a> in the category of <a class="existingWikiWord" href="/nlab/show/finite+sets">finite sets</a>, as opposed to the category of <a class="existingWikiWord" href="/nlab/show/finite+dimensional+vector+spaces">finite dimensional vector spaces</a> over a field <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>F</mi></mrow><annotation encoding="application/x-tex">F</annotation></semantics></math>.</p>
@@ -611,15 +625,19 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/Gunnar+Carlsson">Gunnar Carlsson</a>, <em>Equivariant Stable Homotopy and Segal’s Burnside Ring Conjecture</em>, Annals of Mathematics Second Series, Vol. 120, No. 2 (Sep., 1984), pp. 189-224 (<a href="https://www.jstor.org/stable/2006940">jstor:2006940</a>, <a href="https://web.math.rochester.edu/people/faculty/doug/otherpapers/carlsson.pdf">pdf</a>)</p>
 </li>
 
+<li id="GayMorrisMorris">
+<p>C. D. Gay, G. C. Morris, and I. Morris, <em>Computing Adams operations on the Burnside ring of a finite group</em>, J. Reine Angew. Math., 341 (1983), pp. 87–97.</p>
+</li>
+
 <li id="Lueck05">
 <p><a class="existingWikiWord" href="/nlab/show/Wolfgang+L%C3%BCck">Wolfgang Lück</a>, <em>The Burnside Ring and Equivariant Stable Cohomotopy for Infinite Groups</em> (<a href="https://arxiv.org/abs/math/0504051">arXiv:math/0504051</a>)</p>
 </li>
 </ul>
 
-<p>See also</p>
+<p>Computational aspects are discussed in</p>
 
 <ul>
-<li id="GayMorrisMorris">C. D. Gay, G. C. Morris, and I. Morris, <em>Computing Adams operations on the Burnside ring of a finite group</em>, J. Reine Angew. Math., 341 (1983), pp. 87–97.</li>
+<li>Martin Kreuzer, <em>Computational aspects of Burnside rings, part I: the ring structure</em>, D.P. Beitr Algebra Geom (2017) 58: 427 (<a href="https://doi.org/10.1007/s13366-016-0324-4">doi:10.1007/s13366-016-0324-4</a>)</li>
 </ul>
 </body></html>
 
@@ -627,14 +645,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 20, 2018 at 04:46:42.
+  Last revised on September 23, 2018 at 07:09:05.
   See the <a href="https://ncatlab.org/nlab/history/Burnside ring" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Burnside+ring" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Burnside+ring/18" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(18 revisions)</span> | <a href="/nlab/show/diff/Burnside+ring" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Burnside+ring" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Burnside+ring" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Burnside+ring/19" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(19 revisions)</span> | <a href="/nlab/show/diff/Burnside+ring" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Burnside+ring" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Burnside ring/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
