--- a/pages/19712.html
+++ b/pages/19712.html
@@ -629,8 +629,16 @@ margin-left: 0em;
 
 <h2 id="references">References</h2>
 
+<p>Discussion of the general theory includes</p>
+
 <ul>
-<li id="Mader00">A. Mader, section 1.5 of <em>Almost cpmpletely decomposable groups</em>, CRC Press 2000</li>
+<li id="Mader00">A. Mader, section 1.5 of <em>Almost completely decomposable groups</em>, CRC Press 2000</li>
+</ul>
+
+<p>Computational implementation is discussed in</p>
+
+<ul>
+<li>George Labahn, Vincent Neiger, Wei Zhou, <em>Fast, deterministic computation of the Hermite normal form and determinant of a polynomial matrix</em> (<a href="https://arxiv.org/abs/1607.04176">arXiv:1607.04176</a>)</li>
 </ul>
 
 <p>See also</p>
@@ -644,14 +652,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on September 23, 2018 at 05:27:10.
+  Last revised on September 23, 2018 at 07:13:44.
   See the <a href="https://ncatlab.org/nlab/history/Hermite normal form" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Hermite+normal+form" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Hermite+normal+form" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Hermite+normal+form/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Hermite+normal+form" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Hermite+normal+form" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Hermite normal form/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
