--- a/pages/19700.html
+++ b/pages/19700.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -720,6 +720,12 @@ margin-left: 0em;
 
 <h2 id="references">References</h2>
 
+<p>The results is named after</p>
+
+<ul>
+<li>H.J.S. Smith, <em>On systems of linear indeterminate equations and congruences</em> Philos. Trans. Royal Soc. London cli, 293-326. Reprinted in <em>The Collected Mathematical Papers of Henry John Stephen Smith</em>, Volume 1. New York: Chelsea (1965)</li>
+</ul>
+
 <p>Lecture notes include</p>
 
 <ul>
@@ -734,6 +740,14 @@ margin-left: 0em;
 <li>
 <p>Bill Casselman, <em>Hermite and Smith forms</em>, 2011 (<a href="http://www.math.ubc.ca/~cass/siegel/Smith.pdf">pdf</a>)</p>
 </li>
+
+<li>
+<p>George Havas, Leon Sterling, <em>Integer matrices and abelian groups</em> (<a href="https://pdfs.semanticscholar.org/1f4c/9ae8000e1e9fb6f3131b7812be84d6a9a0ad.pdf">pdf</a>, <a href="https://link.springer.com/chapter/10.1007/3-540-09519-5_94">doi:10.1007/3-540-09519-5_94</a>)</p>
+</li>
+
+<li>
+<p>George Havas, Bohdan Majewski, <em>Integer matrices and diagonalization</em>, J. Symbolic Computation (1997) 24, 399-408 (<a href="http://staff.itee.uq.edu.au/havas/1997hm.pdf">pdf</a>)</p>
+</li>
 </ul>
 
 <p>See also</p>
@@ -747,14 +761,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 23, 2018 at 05:23:34.
+  Last revised on September 23, 2018 at 08:54:18.
   See the <a href="https://ncatlab.org/nlab/history/Smith normal form" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Smith+normal+form" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Smith+normal+form/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Smith+normal+form" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Smith+normal+form" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Smith+normal+form" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Smith+normal+form/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Smith+normal+form" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Smith+normal+form" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Smith normal form/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
