--- a/pages/19712.html
+++ b/pages/19712.html
@@ -610,10 +610,10 @@ margin-left: 0em;
   H \;\coloneqq\; U \cdot M
 
 </annotation></semantics></math></div>
-<p>has Hermite normal form</p>
+<p>has Hermite normal form (Def. <a class="maruku-ref" href="#HermiteNormalForm"></a>).</p>
 </div>
 
-<p>(e.g. <a href="#Mader00">Mader 00, theorem 1.5.2</a>)</p>
+<p>Existence follows by integer row reduction of integer matrices, see e.g. <a href="#GilbertPathria90">Gilbert-Pathria 90, p. 3/4</a>. Uniqueness requires more work (see e.g. <a href="#Mader00">Mader 00, theorem 1.5.2</a>).</p>
 
 <h2 id="related_concepts">Related concepts</h2>
 
@@ -629,7 +629,13 @@ margin-left: 0em;
 
 <h2 id="references">References</h2>
 
-<p>Discussion of the general theory includes</p>
+<p>Integer row reduction for integer matrices via <a class="existingWikiWord" href="/nlab/show/greatest+common+divisors">greatest common divisors</a> is explained for instance in</p>
+
+<ul>
+<li id="GilbertPathria90">William Gilbert, Anu Pathria, <em>Linear Diophantine Equations</em>, 1990 (<a href="https://www.math.uwaterloo.ca/~wgilbert/Research/GilbertPathria.pdf">pdf</a>, <a class="existingWikiWord" href="/nlab/files/GilbertPathria90.pdf" title="pdf">pdf</a>)</li>
+</ul>
+
+<p>Discussion of the general theory of integer matrices includes</p>
 
 <ul>
 <li id="Mader00">A. Mader, section 1.5 of <em>Almost completely decomposable groups</em>, CRC Press 2000</li>
@@ -652,14 +658,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 23, 2018 at 07:13:44.
+  Last revised on September 23, 2018 at 09:27:31.
   See the <a href="https://ncatlab.org/nlab/history/Hermite normal form" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Hermite+normal+form" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Hermite+normal+form/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Hermite+normal+form" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Hermite+normal+form" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Hermite+normal+form" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Hermite+normal+form/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Hermite+normal+form" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Hermite+normal+form" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Hermite normal form/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
