--- a/pages/8916.html
+++ b/pages/8916.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/4557/#Item_5" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/4557/#Item_7" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -347,10 +347,10 @@ margin-left: 0em;
 <p>Any two Sylow <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>p</mi></mrow><annotation encoding="application/x-tex">p</annotation></semantics></math>-subgroups of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> are conjugate.</p>
 </div>
 
-<p>See <a class="existingWikiWord" href="/nlab/show/class+equation">class equation</a> for a detailed discussion of these matters. On the other hand, here is a slick proof for the existence of Sylow subgroups, suggested to us by <a class="existingWikiWord" href="/nlab/show/Benjamin+Steinberg">Benjamin Steinberg</a>.</p>
+<p>See <a class="existingWikiWord" href="/nlab/show/class+equation">class equation</a> for a detailed discussion of these matters. (Now updated to take into account the proof below. The discussion above refers to a more involved proof from an earlier page version, which in turn was adapted from the Wikipedia article; it may be found <a href="https://nforum.ncatlab.org/discussion/6646/class-equation/">here</a>, comment 4.) The following slick proof for the existence of Sylow subgroups was suggested to us by <a class="existingWikiWord" href="/nlab/show/Benjamin+Steinberg">Benjamin Steinberg</a>.</p>
 
 <div class="proof">
-<h6 id="proof">Proof</h6>
+<h6 id="proof_that_sylow_subgroups_exist">Proof that Sylow subgroups exist</h6>
 
 <p>First observe that if a group <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> has a <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>p</mi></mrow><annotation encoding="application/x-tex">p</annotation></semantics></math>-Sylow subgroup <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>P</mi></mrow><annotation encoding="application/x-tex">P</annotation></semantics></math>, then so does each of its subgroups <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>H</mi></mrow><annotation encoding="application/x-tex">H</annotation></semantics></math>. For we let <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>H</mi></mrow><annotation encoding="application/x-tex">H</annotation></semantics></math> act on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi><mo stretchy="false">/</mo><mi>P</mi></mrow><annotation encoding="application/x-tex">G/P</annotation></semantics></math> by left translation, and then note that since <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi><mo stretchy="false">/</mo><mi>P</mi></mrow><annotation encoding="application/x-tex">G/P</annotation></semantics></math> has cardinality prime to <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>p</mi></mrow><annotation encoding="application/x-tex">p</annotation></semantics></math>, so must one of its connected components <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>H</mi><mo stretchy="false">/</mo><mi>Stab</mi><mo stretchy="false">(</mo><msub><mi>a</mi> <mi>x</mi></msub><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">H/Stab(a_x)</annotation></semantics></math> in the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>H</mi></mrow><annotation encoding="application/x-tex">H</annotation></semantics></math>-set decomposition</p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>G</mi><mo stretchy="false">/</mo><mi>P</mi><mo>≅</mo><munder><mo lspace="thinmathspace" rspace="thinmathspace">∑</mo> <mrow><mi>orbits</mi><mspace width="thickmathspace"></mspace><mi>x</mi></mrow></munder><mi>H</mi><mo stretchy="false">/</mo><mi>Stab</mi><mo stretchy="false">(</mo><msub><mi>a</mi> <mi>x</mi></msub><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">G/P \cong \sum_{orbits\; x} H/Stab(a_x)</annotation></semantics></math></div>
@@ -380,14 +380,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 23, 2018 at 09:36:43.
+  Last revised on September 23, 2018 at 11:45:47.
   See the <a href="https://ncatlab.org/nlab/history/Sylow p-subgroup" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sylow+p-subgroup" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sylow+p-subgroup/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/Sylow+p-subgroup" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sylow+p-subgroup" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sylow+p-subgroup" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sylow+p-subgroup/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/Sylow+p-subgroup" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sylow+p-subgroup" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Sylow p-subgroup/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
