--- a/pages/7544.html
+++ b/pages/7544.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8535/#Item_29" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8535/#Item_34" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -826,7 +826,18 @@ margin-left: 0em;
 </div>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#definition_impredicative_case">Definition (impredicative case)</a></li><li><a href="#properties">Properties</a></li><li><a href="#definition_predicative_case">Definition (predicative case)</a></li><li><a href="#Examples">Examples</a></li><li><a href="#related_pages">Related pages</a></li><li><a href="#references">References</a></li></ul></div>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#idea'>Idea</a></li>
+<li><a href='#definition_impredicative_case'>Definition (impredicative case)</a></li>
+<li><a href='#properties'>Properties</a></li>
+<li><a href='#definition_predicative_case'>Definition (predicative case)</a></li>
+<li><a href='#Examples'>Examples</a></li>
+<li><a href='#related_pages'>Related pages</a></li>
+<li><a href='#references'>References</a></li>
+</ul>
+</div>
+
 <h2 id="idea">Idea</h2>
 
 <p>The notion of an <em>elementary (∞,1)-topos</em> is an analogue of the notion of <em><a class="existingWikiWord" href="/nlab/show/elementary+topos">elementary topos</a></em> in <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-category+theory">(∞,1)-category theory</a>. This is in contrast to the notion of a <em>Grothendieck</em> <em><a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-topos">(∞,1)-topos</a> <a class="existingWikiWord" href="/nlab/show/equivalence+of+%28%E2%88%9E%2C1%29-categories">equivalent</a> to an <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-category+of+%28%E2%88%9E%2C1%29-sheaves">(∞,1)-category of (∞,1)-sheaves</a></em>, the analogue of a <a class="existingWikiWord" href="/nlab/show/sheaf+topos">sheaf topos</a>, which is more specific (see <a class="existingWikiWord" href="/nlab/show/geometric+homotopy+type+theory">geometric homotopy type theory</a>).</p>
@@ -1006,6 +1017,10 @@ margin-left: 0em;
 
 <ul>
 <li>
+<p><a class="existingWikiWord" href="/nlab/show/Michael+Shulman">Michael Shulman</a>, <em>Towards elementary infinity-toposes</em>, Vladimir Voevodsky Memorial Conference, IAS, September 2018, <a href="https://www.youtube.com/watch?v=ld4YL787dAk">talk</a>.</p>
+</li>
+
+<li>
 <p><a class="existingWikiWord" href="/nlab/show/Michael+Shulman">Michael Shulman</a>, <a class="existingWikiWord" href="/nlab/show/Peter+Lumsdaine">Peter Lumsdaine</a>, 2016, <em>Semantics and syntax of higher inductive types</em>, (<a href="http://home.sandiego.edu/~shulman/papers/stthits.pdf">slides</a>)</p>
 </li>
 
@@ -1053,14 +1068,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September  8, 2018 at 02:36:11.
+  Last revised on September 24, 2018 at 03:54:03.
   See the <a href="https://ncatlab.org/nlab/history/elementary (infinity,1)-topos" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/elementary+%28infinity%2C1%29-topos" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/elementary+%28infinity%2C1%29-topos/28" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(28 revisions)</span> | <a href="/nlab/show/diff/elementary+%28infinity%2C1%29-topos" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/elementary+%28infinity%2C1%29-topos" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/elementary+%28infinity%2C1%29-topos" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/elementary+%28infinity%2C1%29-topos/29" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(29 revisions)</span> | <a href="/nlab/show/diff/elementary+%28infinity%2C1%29-topos" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/elementary+%28infinity%2C1%29-topos" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/elementary (infinity,1)-topos/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
