--- a/pages/15269.html
+++ b/pages/15269.html
@@ -857,7 +857,7 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/Miles+Reid">Miles Reid</a>, <em><a href="homepages.warwick.ac.uk/staff/Miles.Reid/McKay/">Links to papers on McKay correspondence</a></em></li>
 </ul>
 
-<p>As an isomorphism between the <a class="existingWikiWord" href="/nlab/show/equivariant+K-theory">equivariant K-theory</a> of <a class="existingWikiWord" href="/nlab/show/ADE-singularity">ADE-singularity</a> and the plain <a class="existingWikiWord" href="/nlab/show/topological+K-theory">topological K-theory</a> of its resolutioningularity#ResolutionBySpheresTouchingAlongADynkinDiagram), the McKay correspondence is proven in:</p>
+<p>As an isomorphism between the <a class="existingWikiWord" href="/nlab/show/equivariant+K-theory">equivariant K-theory</a> of <a class="existingWikiWord" href="/nlab/show/ADE-singularity">ADE-singularity</a> and the plain <a class="existingWikiWord" href="/nlab/show/topological+K-theory">topological K-theory</a> of its <a href="ADE+singularity#ResolutionBySpheresTouchingAlongADynkinDiagram">resolution</a>, the McKay correspondence is proven in:</p>
 
 <ul>
 <li id="GSV85"><a class="existingWikiWord" href="/nlab/show/G%C3%A9rard+Gonzalez-Sprinberg">Gérard Gonzalez-Sprinberg</a>, <a class="existingWikiWord" href="/nlab/show/Jean-Louis+Verdier">Jean-Louis Verdier</a>, <em>Construction géométrique de la correspondance de McKay</em>, Ann. Sci. ́École Norm. Sup.16 (1983) 409–449. (<a href="http://www.numdam.org/item?id=ASENS_1983_4_16_3_409_0">numdam</a>)</li>
@@ -874,14 +874,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 22, 2018 at 09:51:40.
+  Last revised on September 24, 2018 at 09:22:15.
   See the <a href="https://ncatlab.org/nlab/history/McKay correspondence" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/McKay+correspondence" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/McKay+correspondence/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/McKay+correspondence" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/McKay+correspondence" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/McKay+correspondence" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/McKay+correspondence/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/McKay+correspondence" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/McKay+correspondence" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/McKay correspondence/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
