--- a/pages/1788.html
+++ b/pages/1788.html
@@ -361,20 +361,22 @@ margin-left: 0em;
 0 &amp; 0 &amp; 0 &amp; 0 &amp; 1
 }\right)
 
-</annotation></semantics></math></div></body></html>
+</annotation></semantics></math></div>
+<p><span class="newWikiWord">lens (in computer science)<a href="/nlab/new/lens+%28in+computer+science%29">?</a></span></p>
+</body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on September 22, 2018 at 12:42:32.
+  Last revised on September 24, 2018 at 09:54:59.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1691" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1691 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1692" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1692 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
