--- a/pages/1239.html
+++ b/pages/1239.html
@@ -624,7 +624,15 @@ margin-left: 0em;
 </div>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#InHomotopyTypeTheory">In homotopy type theory</a></li><li><a href="#related_entries">Related entries</a></li><li><a href="#References">References</a></li></ul></div>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#idea'>Idea</a></li>
+<li><a href='#InHomotopyTypeTheory'>In homotopy type theory</a></li>
+<li><a href='#related_entries'>Related entries</a></li>
+<li><a href='#References'>References</a></li>
+</ul>
+</div>
+
 <h2 id="idea">Idea</h2>
 
 <p><em>Representation theory</em> is concerned with the study of <a class="existingWikiWord" href="/nlab/show/algebra">algebraic</a> <a class="existingWikiWord" href="/nlab/show/structures">structures</a> via their <a class="existingWikiWord" href="/nlab/show/representations">representations</a>, This concerns notably <a class="existingWikiWord" href="/nlab/show/groups">groups</a>, directly or in their incarnation as <a class="existingWikiWord" href="/nlab/show/group+algebras">group algebras</a>, <a class="existingWikiWord" href="/nlab/show/Hopf+algebras">Hopf algebras</a> or <a class="existingWikiWord" href="/nlab/show/Lie+algebras">Lie algebras</a>, and usually concerns <a class="existingWikiWord" href="/nlab/show/linear+algebra">linear</a> <a class="existingWikiWord" href="/nlab/show/representations">representations</a>, hence <a class="existingWikiWord" href="/nlab/show/modules">modules</a> of these structures. But more generally representation theory also studies <a class="existingWikiWord" href="/nlab/show/representations">representations</a>/<a class="existingWikiWord" href="/nlab/show/modules">modules</a>/<a class="existingWikiWord" href="/nlab/show/actions">actions</a> of generalizations of such structures, such as <a class="existingWikiWord" href="/nlab/show/coalgebras">coalgebras</a> via their <a class="existingWikiWord" href="/nlab/show/comodules">comodules</a> etc.</p>
@@ -817,7 +825,13 @@ margin-left: 0em;
 <p>Textbooks include</p>
 
 <ul>
-<li id="FultonHarris91"><a class="existingWikiWord" href="/nlab/show/William+Fulton">William Fulton</a>, <a class="existingWikiWord" href="/nlab/show/Joe+Harris">Joe Harris</a>, <em>Representation Theory: a First Course</em>, Springer, Berlin, 1991 (<a href="http://isites.harvard.edu/fs/docs/icb.topic1381051.files/fulton-harris-representation-theory.pdf">pdf</a>)</li>
+<li>
+<p>Charles Curtis, Irving Reiner, <em>Representation theory of finite groups and associative algebras</em>, AMS 1962</p>
+</li>
+
+<li id="FultonHarris91">
+<p><a class="existingWikiWord" href="/nlab/show/William+Fulton">William Fulton</a>, <a class="existingWikiWord" href="/nlab/show/Joe+Harris">Joe Harris</a>, <em>Representation Theory: a First Course</em>, Springer, Berlin, 1991 (<a href="http://isites.harvard.edu/fs/docs/icb.topic1381051.files/fulton-harris-representation-theory.pdf">pdf</a>)</p>
+</li>
 </ul>
 
 <p>A list of texts on representation theory is maintained at</p>
@@ -837,14 +851,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 16, 2018 at 12:00:19.
+  Last revised on September 24, 2018 at 11:32:36.
   See the <a href="https://ncatlab.org/nlab/history/representation theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/representation+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/representation+theory/20" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(20 revisions)</span> | <a href="/nlab/show/diff/representation+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/representation+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/representation+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/representation+theory/21" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(21 revisions)</span> | <a href="/nlab/show/diff/representation+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/representation+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/representation theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
