--- a/pages/16174.html
+++ b/pages/16174.html
@@ -581,6 +581,10 @@ margin-left: 0em;
 <p>Textbook accounts and lecture notes include</p>
 
 <ul>
+<li>
+<p>Charles Curtis, Irving Reiner, chapter XI of <em>Representation theory of finite groups and associative algebras</em>, AMS 1962</p>
+</li>
+
 <li id="tomDieck79">
 <p><a class="existingWikiWord" href="/nlab/show/Tammo+tom+Dieck">Tammo tom Dieck</a>, <em><a class="existingWikiWord" href="/nlab/show/Transformation+Groups+and+Representation+Theory">Transformation Groups and Representation Theory</a></em>, Springer 1979</p>
 </li>
@@ -645,14 +649,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 23, 2018 at 07:09:05.
+  Last revised on September 24, 2018 at 11:36:55.
   See the <a href="https://ncatlab.org/nlab/history/Burnside ring" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Burnside+ring" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Burnside+ring/19" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(19 revisions)</span> | <a href="/nlab/show/diff/Burnside+ring" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Burnside+ring" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Burnside+ring" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Burnside+ring/20" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(20 revisions)</span> | <a href="/nlab/show/diff/Burnside+ring" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Burnside+ring" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Burnside ring/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
