--- a/pages/1972.html
+++ b/pages/1972.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -780,7 +780,29 @@ margin-left: 0em;
 </div>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#definition">Definition</a><ul><li><a href="#in_components">In components</a></li><li><a href="#AsEquivariantKTheoryOfThePoint">As equivariant K-theory of the point</a></li></ul></li><li><a href="#properties">Properties</a><ul><li><a href="#relation_to_the_character_ring">Relation to the character ring</a></li><li><a href="#relation_to_equivariant_ktheory">Relation to equivariant K-theory</a></li><li><a href="#relation_to_the_burnside_ring">Relation to the Burnside ring</a></li><li><a href="#completion">Completion</a></li></ul></li><li><a href="#examples">Examples</a><ul><li><a href="#spin_group">Spin group</a></li></ul></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#references">References</a></li></ul></div>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#definition'>Definition</a></li>
+<ul>
+<li><a href='#in_components'>In components</a></li>
+<li><a href='#AsEquivariantKTheoryOfThePoint'>As equivariant K-theory of the point</a></li>
+</ul>
+<li><a href='#properties'>Properties</a></li>
+<ul>
+<li><a href='#relation_to_the_character_ring'>Relation to the character ring</a></li>
+<li><a href='#relation_to_schurs_lemma'>Relation to Schur’s lemma</a></li>
+<li><a href='#relation_to_equivariant_ktheory'>Relation to equivariant K-theory</a></li>
+<li><a href='#relation_to_the_burnside_ring'>Relation to the Burnside ring</a></li>
+</ul>
+<li><a href='#examples'>Examples</a></li>
+<ul>
+<li><a href='#spin_group'>Spin group</a></li>
+</ul>
+<li><a href='#related_concepts'>Related concepts</a></li>
+<li><a href='#references'>References</a></li>
+</ul>
+</div>
+
 <h2 id="definition">Definition</h2>
 
 <p>Any <a class="existingWikiWord" href="/nlab/show/group">group</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> has a <a class="existingWikiWord" href="/nlab/show/category">category</a> of finite-dimensional <a class="existingWikiWord" href="/nlab/show/complex+number">complex</a>-linear <a class="existingWikiWord" href="/nlab/show/representations">representations</a>, often denoted <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Rep</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">Rep(G)</annotation></semantics></math>. This is a <a class="existingWikiWord" href="/nlab/show/symmetric+monoidal+category">symmetric monoidal</a> <a class="existingWikiWord" href="/nlab/show/abelian+category">abelian category</a> (a “<a class="existingWikiWord" href="/nlab/show/tensor+category">tensor category</a>”) and thus has a <a class="existingWikiWord" href="/nlab/show/Grothendieck+ring">Grothendieck ring</a>, which is called the <strong>representation ring</strong> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> and denoted <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>R</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">R(G)</annotation></semantics></math>. Elements of the representation ring are hence formal differences (with respect to <a class="existingWikiWord" href="/nlab/show/direct+sum">direct sum</a>) of ordinary representations: <a class="existingWikiWord" href="/nlab/show/virtual+representations">virtual representations</a>.</p>
@@ -813,6 +835,38 @@ margin-left: 0em;
 <p>If <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> is a <a class="existingWikiWord" href="/nlab/show/finite+group">finite group</a> and we <a class="existingWikiWord" href="/nlab/show/tensor+product+of+modules">tensor</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>R</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">R(G)</annotation></semantics></math> with the <a class="existingWikiWord" href="/nlab/show/complex+numbers">complex numbers</a>, it becomes <a class="existingWikiWord" href="/nlab/show/isomorphism">isomorphic</a> to the <strong><a class="existingWikiWord" href="/nlab/show/character+ring">character ring</a></strong> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>: that is, the ring of complex-valued functions on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> that are constant on each <a class="existingWikiWord" href="/nlab/show/conjugacy+class">conjugacy class</a>. Such functions are called <strong><a class="existingWikiWord" href="/nlab/show/class+functions">class functions</a></strong>.</p>
 
 <p>Similarly for <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> a <a class="existingWikiWord" href="/nlab/show/compact+Lie+group">compact Lie group</a>, its complex linear <a class="existingWikiWord" href="/nlab/show/representations">representations</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ρ</mi><mo lspace="verythinmathspace">:</mo><mi>G</mi><mo>→</mo><mi>U</mi><mo stretchy="false">(</mo><mi>n</mi><mo stretchy="false">)</mo><mo>→</mo><mi>Aut</mi><mo stretchy="false">(</mo><msup><mi>ℂ</mi> <mi>n</mi></msup><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\rho \colon G \to U(n) \to Aut(\mathbb{C}^n)</annotation></semantics></math> (for all <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding="application/x-tex">n \in \mathbb{N}</annotation></semantics></math>) are uniquely specified by their <a class="existingWikiWord" href="/nlab/show/characters">characters</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>χ</mi> <mi>ρ</mi></msub><mo>≔</mo><mi>tr</mi><mo stretchy="false">(</mo><mi>ρ</mi><mo stretchy="false">(</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><mo stretchy="false">)</mo><mo stretchy="false">)</mo><mo lspace="verythinmathspace">:</mo><mi>G</mi><mo>→</mo><mi>ℂ</mi></mrow><annotation encoding="application/x-tex">\chi_\rho \coloneqq tr(\rho(-)) \colon G \to \mathbb{C}</annotation></semantics></math>. Therefore also here the representation ring is often called the <em>character ring</em> of the group.</p>
+
+<h3 id="relation_to_schurs_lemma">Relation to Schur’s lemma</h3>
+
+<p>The (<a class="existingWikiWord" href="/nlab/show/isomorphism+classes">isomorphism classes</a>) of <a class="existingWikiWord" href="/nlab/show/finite-dimensional+vector+space">finite-dimensional</a> <a class="existingWikiWord" href="/nlab/show/irreducible+representations">irreducible representations</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>V</mi> <mi>i</mi></msub></mrow><annotation encoding="application/x-tex">V_i</annotation></semantics></math> form the canonical <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ℤ</mi></mrow><annotation encoding="application/x-tex">\mathbb{Z}</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/linear+basis">linear basis</a> of the representation ring:</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>R</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo><mspace width="thickmathspace"></mspace><mo>≃</mo><mspace width="thickmathspace"></mspace><mi>ℤ</mi><mo maxsize="1.2em" minsize="1.2em">[</mo><mo stretchy="false">{</mo><msub><mi>V</mi> <mi>i</mi></msub><msub><mo stretchy="false">}</mo> <mi>i</mi></msub><mo maxsize="1.2em" minsize="1.2em">]</mo><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
+  R(G) \;\simeq\; \mathbb{Z}\big[  \{V_i\}_i \big]
+  \,.
+
+</annotation></semantics></math></div>
+<p>Moreover, the <a class="existingWikiWord" href="/nlab/show/function">function</a> assigning <a class="existingWikiWord" href="/nlab/show/dimensions">dimensions</a> of <a class="existingWikiWord" href="/nlab/show/hom-object">hom</a>-<a class="existingWikiWord" href="/nlab/show/vector+spaces">vector spaces</a> constitutes a canonical bilinear symmetric <a class="existingWikiWord" href="/nlab/show/inner+product">inner product</a>:</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mo stretchy="false">⟨</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><mo>,</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><mo stretchy="false">⟩</mo><mspace width="thickmathspace"></mspace><mo lspace="verythinmathspace">:</mo><mspace width="thickmathspace"></mspace><mi>R</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo><mo>×</mo><mi>R</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo><mo>⟶</mo><mi>ℤ</mi><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
+  \langle -,-\rangle
+  \;\colon\;
+  R(G) \times R(G)
+    \longrightarrow
+  \mathbb{Z}
+  \,.
+
+</annotation></semantics></math></div>
+<p>In terms of this, <em><a class="existingWikiWord" href="/nlab/show/Schur%27s+lemma">Schur's lemma</a></em> states that the <a class="existingWikiWord" href="/nlab/show/irreducible+representations">irreducible representations</a> generally constitute an <em><a class="existingWikiWord" href="/nlab/show/orthogonal+basis">orthogonal basis</a></em>, and even an <em><a class="existingWikiWord" href="/nlab/show/orthonormal+basis">orthonormal basis</a></em> when the <a class="existingWikiWord" href="/nlab/show/ground+field">ground field</a> is <a class="existingWikiWord" href="/nlab/show/algebraically+closed+field">algebraically closed</a>.</p>
+
+<p>For more discussion of this perspective, see</p>
+
+<ul>
+<li>
+<p>at <em><a class="existingWikiWord" href="/nlab/show/Schur%27s+lemma">Schur's lemma</a></em> the section <em><a href="Schur's+lemma#InterpretationInCategoricalAlgebra">In terms of categorical algebra</a></em>;</p>
+</li>
+
+<li>
+<p>at <em><a class="existingWikiWord" href="/nlab/show/Gram-Schmidt+process">Gram-Schmidt process</a></em> the section <em><a href="Gram-Schmidt+process#CategorifiedGramSchmidtProcess">Categorified Gram-Schmidt process</a></em>.</p>
+</li>
+</ul>
 
 <h3 id="relation_to_equivariant_ktheory">Relation to equivariant K-theory</h3>
 
@@ -880,10 +934,6 @@ margin-left: 0em;
 </annotation></semantics></math></div>
 <p>from the <a class="existingWikiWord" href="/nlab/show/sphere+spectrum">sphere spectrum</a> to <a class="existingWikiWord" href="/nlab/show/KU">KU</a>.</p>
 
-<h3 id="completion">Completion</h3>
-
-<p>On the other hand, by the <a class="existingWikiWord" href="/nlab/show/Atiyah-Segal+completion+theorem">Atiyah-Segal completion theorem</a> in Borel-equivriant K-theory only the <a class="existingWikiWord" href="/nlab/show/completion+of+a+ring">completion</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Rep</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">Rep(G)</annotation></semantics></math> at the <a class="existingWikiWord" href="/nlab/show/augmentation+ideal">augmentation ideal</a> appears</p>
-
 <h2 id="examples">Examples</h2>
 
 <h3 id="spin_group">Spin group</h3>
@@ -947,14 +997,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 11, 2018 at 11:53:57.
+  Last revised on September 24, 2018 at 11:18:01.
   See the <a href="https://ncatlab.org/nlab/history/representation ring" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/representation+ring" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/representation+ring/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/representation+ring" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/representation+ring" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/representation+ring" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/representation+ring/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/representation+ring" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/representation+ring" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/representation ring/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
