--- a/pages/2570.html
+++ b/pages/2570.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8388/#Item_16" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8388/#Item_22" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -574,7 +574,9 @@ margin-left: 0em;
 
 <h2 id="CategorifiedGramSchmidtProcess">Categorified Gram–Schmidt process</h2>
 
-<p>Many aspects of the Gram–Schmidt process can be <a class="existingWikiWord" href="/nlab/show/categorification">categorified</a> so as to apply to <a class="existingWikiWord" href="/nlab/show/2-Hilbert+spaces">2-Hilbert spaces</a>. We will illustrate the basic idea with an example that was suggested to us by <a class="existingWikiWord" href="/nlab/show/James+Dolan">James Dolan</a>. (See also at <em><a class="existingWikiWord" href="/nlab/show/permutation+representation">permutation representation</a></em> the sections <em><a href="permutation+representation#ExamplesVirtualPermutationRepresentations">Examples – Virtual permutation representations</a></em>.)</p>
+<p>Many aspects of the Gram–Schmidt process can be <a class="existingWikiWord" href="/nlab/show/categorification">categorified</a> so as to apply to <a class="existingWikiWord" href="/nlab/show/2-Hilbert+spaces">2-Hilbert spaces</a> as indicated at <em><a class="existingWikiWord" href="/nlab/show/Schur%27s+lemma">Schur's lemma</a></em> in the section <em><a href="Schur's+lemma#InterpretationInCategoricalAlgebra">In terms of categorical algebra</a></em>;</p>
+
+<p>We will illustrate the basic idea with an example that was suggested to us by <a class="existingWikiWord" href="/nlab/show/James+Dolan">James Dolan</a>. (See also at <em><a class="existingWikiWord" href="/nlab/show/permutation+representation">permutation representation</a></em> the sections <em><a href="permutation+representation#ExamplesVirtualPermutationRepresentations">Examples – Virtual permutation representations</a></em>.)</p>
 
 <p>Consider the <a class="existingWikiWord" href="/nlab/show/category+of+representations">category of representations</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>S</mi> <mi>n</mi></msub><mi>Rep</mi></mrow><annotation encoding="application/x-tex">S_n Rep</annotation></semantics></math> over the <a class="existingWikiWord" href="/nlab/show/complex+numbers">complex numbers</a> of the <a class="existingWikiWord" href="/nlab/show/symmetric+group">symmetric group</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi><mo>≔</mo><msub><mi>S</mi> <mi>n</mi></msub></mrow><annotation encoding="application/x-tex">G \coloneqq S_n</annotation></semantics></math>. (As a running example, we consider <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>S</mi> <mn>4</mn></msub></mrow><annotation encoding="application/x-tex">S_4</annotation></semantics></math>; up to <a class="existingWikiWord" href="/nlab/show/isomorphism">isomorphism</a>, there are five <a class="existingWikiWord" href="/nlab/show/irreducible+representations">irreducible representations</a></p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mi>U</mi> <mrow><mo stretchy="false">(</mo><mn>4</mn><mo stretchy="false">)</mo></mrow></msub><mo>,</mo><mspace width="thinmathspace"></mspace><msub><mi>U</mi> <mrow><mo stretchy="false">(</mo><mn>3</mn><mn>1</mn><mo stretchy="false">)</mo></mrow></msub><mo>,</mo><mspace width="thinmathspace"></mspace><msub><mi>U</mi> <mrow><mo stretchy="false">(</mo><mn>2</mn><mn>2</mn><mo stretchy="false">)</mo></mrow></msub><mo>,</mo><mspace width="thinmathspace"></mspace><msub><mi>U</mi> <mrow><mo stretchy="false">(</mo><mn>2</mn><mn>1</mn><mn>1</mn><mo stretchy="false">)</mo></mrow></msub><mo>,</mo><mspace width="thinmathspace"></mspace><msub><mi>U</mi> <mrow><mo stretchy="false">(</mo><mn>1</mn><mn>1</mn><mn>1</mn><mn>1</mn><mo stretchy="false">)</mo></mrow></msub></mrow><annotation encoding="application/x-tex">U_{(4)}, \, U_{(3 1)}, \, U_{(2 2)}, \, U_{(2 1 1)}, \, U_{(1 1 1 1)}</annotation></semantics></math></div>
@@ -677,14 +679,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 23, 2018 at 05:25:24.
+  Last revised on September 24, 2018 at 11:18:46.
   See the <a href="https://ncatlab.org/nlab/history/Gram-Schmidt process" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Gram-Schmidt+process" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Gram-Schmidt+process/17" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(17 revisions)</span> | <a href="/nlab/show/diff/Gram-Schmidt+process" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Gram-Schmidt+process" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Gram-Schmidt+process" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Gram-Schmidt+process/18" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(18 revisions)</span> | <a href="/nlab/show/diff/Gram-Schmidt+process" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Gram-Schmidt+process" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Gram-Schmidt process/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
