--- a/pages/2134.html
+++ b/pages/2134.html
@@ -555,15 +555,17 @@ margin-left: 0em;
 <p>This is a useful perspective even after <a class="existingWikiWord" href="/nlab/show/decategorification">decategorification</a>:</p>
 
 <p>For <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>V</mi><mo>,</mo><mi>W</mi><mo>∈</mo><mi>G</mi><msup><mi>Rep</mi> <mi>fin</mi></msup></mrow><annotation encoding="application/x-tex">V, W \in G Rep^{fin}</annotation></semantics></math> two <a class="existingWikiWord" href="/nlab/show/finite-dimensional+vector+space">finite-dimensional</a> <a class="existingWikiWord" href="/nlab/show/representations">representations</a>, write</p>
-<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mo stretchy="false">⟨</mo><mi>V</mi><mo>,</mo><mi>W</mi><mo stretchy="false">⟩</mo><mspace width="thickmathspace"></mspace><mo>≔</mo><mspace width="thickmathspace"></mspace><mi>dim</mi><mrow><mo>(</mo><msub><mi>hom</mi> <mi>G</mi></msub><mo stretchy="false">(</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><mo>,</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><mo stretchy="false">)</mo><mo>)</mo></mrow><mspace width="thickmathspace"></mspace><mo>∈</mo><mspace width="thickmathspace"></mspace><mi>ℕ</mi></mrow><annotation encoding="application/x-tex">
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mo stretchy="false">⟨</mo><mi>V</mi><mo>,</mo><mi>W</mi><mo stretchy="false">⟩</mo><mspace width="thickmathspace"></mspace><mo>≔</mo><mspace width="thickmathspace"></mspace><mi>dim</mi><mo maxsize="1.2em" minsize="1.2em">(</mo><msub><mi>hom</mi> <mi>G</mi></msub><mo stretchy="false">(</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><mo>,</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><mo stretchy="false">)</mo><mo maxsize="1.2em" minsize="1.2em">)</mo><mspace width="thickmathspace"></mspace><mo>∈</mo><mspace width="thickmathspace"></mspace><mi>ℕ</mi></mrow><annotation encoding="application/x-tex">
   \langle V,W\rangle
   \;\coloneqq\;
-  dim\left( hom_G(-,-) \right)
+  dim\big( hom_G(-,-) \big)
   \;\in\;
   \mathbb{N}
 
 </annotation></semantics></math></div>
-<p>for the <a class="existingWikiWord" href="/nlab/show/dimension">dimension</a> of the vector space of homomorphism between them. This only depends on the <a class="existingWikiWord" href="/nlab/show/isomorphism+classes">isomorphism classes</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>V</mi></mrow><annotation encoding="application/x-tex">V</annotation></semantics></math> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>W</mi></mrow><annotation encoding="application/x-tex">W</annotation></semantics></math>, and hence descends to a <a class="existingWikiWord" href="/nlab/show/function">function</a></p>
+<p>for the <a class="existingWikiWord" href="/nlab/show/dimension">dimension</a> of the vector space of homomorphism between them (e.g. <a href="#tomDieck09">tom Dieck 09, p. 29</a>).</p>
+
+<p>This construction only depends on the <a class="existingWikiWord" href="/nlab/show/isomorphism+classes">isomorphism classes</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>V</mi></mrow><annotation encoding="application/x-tex">V</annotation></semantics></math> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>W</mi></mrow><annotation encoding="application/x-tex">W</annotation></semantics></math>, and hence descends to a <a class="existingWikiWord" href="/nlab/show/function">function</a></p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mo stretchy="false">⟨</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><mo>,</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><mo stretchy="false">⟩</mo><mspace width="thickmathspace"></mspace><mo lspace="verythinmathspace">:</mo><mspace width="thickmathspace"></mspace><mi>G</mi><msubsup><mi>Rep</mi> <mrow><mo stretchy="false">/</mo><mo>∼</mo></mrow> <mi>fin</mi></msubsup><mo>×</mo><mi>G</mi><msubsup><mi>Rep</mi> <mrow><mo stretchy="false">/</mo><mo>∼</mo></mrow> <mi>fin</mi></msubsup><mo>⟶</mo><mi>ℕ</mi></mrow><annotation encoding="application/x-tex">  \langle -,-\rangle 
   \;\colon\; 
   G Rep^{fin}_{/\sim} \times G Rep^{fin}_{/\sim}
@@ -663,6 +665,12 @@ margin-left: 0em;
 
 <h2 id="references">References</h2>
 
+<p>Lecture notes include</p>
+
+<ul>
+<li id="tomDieck09"><a class="existingWikiWord" href="/nlab/show/Tammo+tom+Dieck">Tammo tom Dieck</a>, (1.1.2) in <em>Representation theory</em>, 2009 (<a href="http://www.uni-math.gwdg.de/tammo/rep.pdf">pdf</a>)</li>
+</ul>
+
 <p>See also</p>
 
 <ul>
@@ -674,14 +682,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 24, 2018 at 11:38:27.
+  Last revised on September 24, 2018 at 12:35:19.
   See the <a href="https://ncatlab.org/nlab/history/Schur&#39;s lemma" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Schur%27s+lemma" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Schur%27s+lemma/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/Schur%27s+lemma" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Schur%27s+lemma" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Schur%27s+lemma" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Schur%27s+lemma/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/Schur%27s+lemma" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Schur%27s+lemma" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Schur&#39;s lemma/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
