--- a/pages/1164.html
+++ b/pages/1164.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -988,7 +988,24 @@ margin-left: 0em;
 </div>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#definition">Definition</a></li><li><a href="#variants">Variants</a></li><li><a href="#properties">Properties</a><ul><li><a href="#relation_to_spaces_and_elmendorfs_theorem">Relation to <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-spaces and Elmendorf’s theorem</a></li><li><a href="#relation_to_equivariant_homotopy_theory">Relation to equivariant homotopy theory</a></li><li><a href="#relation_to_mackey_functors">Relation to Mackey functors</a></li><li><a href="#relation_to_bredon_equivariant_cohomology">Relation to Bredon equivariant cohomology</a></li><li><a href="#relation_to_the_category_of_groups_homomorphisms_and_conjugations">Relation to the category of groups, homomorphisms and conjugations</a></li></ul></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#references">References</a></li></ul></div>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#idea'>Idea</a></li>
+<li><a href='#definition'>Definition</a></li>
+<li><a href='#variants'>Variants</a></li>
+<li><a href='#properties'>Properties</a></li>
+<ul>
+<li><a href='#relation_to_spaces_and_elmendorfs_theorem'>Relation to <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-spaces and Elmendorf’s theorem</a></li>
+<li><a href='#relation_to_equivariant_homotopy_theory'>Relation to equivariant homotopy theory</a></li>
+<li><a href='#relation_to_mackey_functors'>Relation to Mackey functors</a></li>
+<li><a href='#relation_to_bredon_equivariant_cohomology'>Relation to Bredon equivariant cohomology</a></li>
+<li><a href='#relation_to_the_category_of_groups_homomorphisms_and_conjugations'>Relation to the category of groups, homomorphisms and conjugations</a></li>
+</ul>
+<li><a href='#related_concepts'>Related concepts</a></li>
+<li><a href='#references'>References</a></li>
+</ul>
+</div>
+
 <h2 id="idea">Idea</h2>
 
 <p>The <em>orbit category</em> of a <a class="existingWikiWord" href="/nlab/show/group">group</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> is the category of “all kinds” of <a class="existingWikiWord" href="/nlab/show/orbits">orbits</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>, namely of all suitable <a class="existingWikiWord" href="/nlab/show/coset+spaces">coset spaces</a> regarded as <a class="existingWikiWord" href="/nlab/show/G-spaces">G-spaces</a>.</p>
@@ -1086,8 +1103,16 @@ margin-left: 0em;
 
 <h2 id="references">References</h2>
 
+<p>Lecture notes include</p>
+
 <ul>
-<li id="May96"><a class="existingWikiWord" href="/nlab/show/Peter+May">Peter May</a>, section I.4 of <em>Equivariant homotopy and cohomology theory</em> CBMS Regional Conference Series in Mathematics, vol. 91, Published for the Conference Board of the Mathematical Sciences, Washington, DC, 1996. With contributions by M. Cole, G. Comezana, S. Costenoble, A. D. Elmenddorf, J. P. C. Greenlees, L. G. Lewis, Jr., R. J. Piacenza, G. Triantafillou, and S. Waner. (<a href="http://www.math.rochester.edu/u/faculty/doug/otherpapers/alaska1.pdf">pdf</a>)</li>
+<li id="tomDieck09">
+<p><a class="existingWikiWord" href="/nlab/show/Tammo+tom+Dieck">Tammo tom Dieck</a>, section 1.3 of <em>Representation theory</em>, 2009 (<a href="http://www.uni-math.gwdg.de/tammo/rep.pdf">pdf</a>)</p>
+</li>
+
+<li id="May96">
+<p><a class="existingWikiWord" href="/nlab/show/Peter+May">Peter May</a>, section I.4 of <em>Equivariant homotopy and cohomology theory</em> CBMS Regional Conference Series in Mathematics, vol. 91, Published for the Conference Board of the Mathematical Sciences, Washington, DC, 1996. With contributions by M. Cole, G. Comezana, S. Costenoble, A. D. Elmenddorf, J. P. C. Greenlees, L. G. Lewis, Jr., R. J. Piacenza, G. Triantafillou, and S. Waner. (<a href="http://www.math.rochester.edu/u/faculty/doug/otherpapers/alaska1.pdf">pdf</a>)</p>
+</li>
 </ul>
 
 <p>A very general setting for the use of orbit categories is described in</p>
@@ -1107,14 +1132,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 17, 2018 at 06:38:40.
+  Last revised on September 24, 2018 at 12:29:05.
   See the <a href="https://ncatlab.org/nlab/history/orbit category" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/orbit+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/orbit+category/20" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(20 revisions)</span> | <a href="/nlab/show/diff/orbit+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/orbit+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/orbit+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/orbit+category/21" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(21 revisions)</span> | <a href="/nlab/show/diff/orbit+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/orbit+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/orbit category/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
