--- a/pages/19710.html
+++ b/pages/19710.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9030/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9030/#Item_8" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -402,11 +402,23 @@ margin-left: 0em;
 <li>
 <p>Andrea Asperti, Wilmer Ricciotti, Claudio Sacerdoti Coen, and Enrico Tassi. <em>A bi-directional refinement algorithm for the calculus of (co)inductive constructions</em>, 2012, <a href="https://arxiv.org/abs/1202.4905">arxiv</a></p>
 </li>
+
+<li>
+<p>Kevin Watkins, Iliano Cervesato, Frank Pfenning, and David Walker. <em>A concurrent logical framework I: Judgments and properties</em>. Technical Report CMU-CS-02-101, Department of Computer Science, Carnegie Mellon University, 2002. Revised May 2003, <a href="http://www.cs.cmu.edu/~fp/papers/CMU-CS-02-101.pdf">pdf</a></p>
+</li>
 </ul>
 
 <h3 id="other_type_theories">Other type theories</h3>
 
 <ul>
+<li>
+<p>Rowan Davies and Frank Pfenning. <em>Intersection types and computational effects</em>. In P. Wadler, editor, Proceedings of the Fifth International Conference on Functional Programming (ICFP’00), pages 198-208, Montreal, Canada, September 2000. ACM Press. <a href="http://www.cs.cmu.edu/~fp/papers/icfp00.pdf">pdf</a></p>
+</li>
+
+<li>
+<p>Joshua Dunfield and Frank Pfenning. <em>Tridirectional typechecking</em>. In X.Leroy, editor, Conference Record of the 31st Annual Symposium on Principles of Programming Languages (POPL’04), pages 281-292, Venice, Italy, January 2004. ACM Press. Extended version available as Technical Report CMU-CS-04-117, March 2004. <a href="http://www.cs.cmu.edu/~fp/papers/popl04.pdf">pdf</a></p>
+</li>
+
 <li>
 <p>Joshua Dunfield, Neelakantan R. Krishnaswami, <em>Complete and Easy Bidirectional Typechecking for Higher-Rank Polymorphism</em>, 2013, <a href="https://arxiv.org/abs/1306.6032">arxiv</a></p>
 </li>
@@ -425,14 +437,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 23, 2018 at 06:07:43.
+  Last revised on September 25, 2018 at 04:39:37.
   See the <a href="https://ncatlab.org/nlab/history/bidirectional typechecking" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/bidirectional+typechecking" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/bidirectional+typechecking/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/bidirectional+typechecking" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/bidirectional+typechecking" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/bidirectional+typechecking" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/bidirectional+typechecking/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/bidirectional+typechecking" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/bidirectional+typechecking" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/bidirectional typechecking/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
